--- a/tests/rendered.tex
+++ b/tests/rendered.tex
@@ -10,10 +10,8 @@
 % Document
 \begin{document}
 
-One text\\
+Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore.\\Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.\\
 
 Second text\\
-
-worked\\
 
 \end{document}
