Added the possibility to use latexmk.

--- a/tests/test.tex
+++ b/tests/test.tex
@@ -9,7 +9,10 @@
 \usepackage[english,ngerman]{babel}
 % Document
 \begin{document}
+\tableofcontents
+\newpage
 
+\section{test}
 \VAR{p["one"]}\\
 
 \VAR{p["second"]}\\
