You can now define variables from within the word document itself. That means, instead of "only" defining variables in the .tex template, you can now define them from within the word like you did in the template. Example: \VAR{p["EXAMPLE"]}

--- a/tests/files/test.tex
+++ b/tests/files/test.tex
@@ -9,12 +9,25 @@
 \usepackage[english,ngerman]{babel}
 % Document
 \begin{document}
-\tableofcontents
-\newpage
 
-\section{test}
-\VAR{p["one"]}\\
+Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore.
 
-\VAR{p["second"]}\\
+Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.
+
+\VAR{p["test"]}
+
+Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore. After this should be an extra new line!
+
+\begin{itemize}
+
+\item Lorem ipsum dolor
+
+\end{itemize}
+
+Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.\\
+
+Second text\\
+
+worked\\
 
 \end{document}
