--- a/tests/files/rendered.tex
+++ b/tests/files/rendered.tex
@@ -9,13 +9,12 @@
 \usepackage[english,ngerman]{babel}
 % Document
 \begin{document}
-\tableofcontents
-\newpage
 
-\section{test}
 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore.
 
 Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.
+
+worked
 
 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore. After this should be an extra new line!
 
@@ -28,5 +27,7 @@ Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod 
 Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.\\
 
 Second text\\
+
+worked\\
 
 \end{document}
