--- a/tests/files/rendered_0.tex
+++ b/tests/files/rendered_0.tex
@@ -12,7 +12,7 @@
 
 Lorem \textbf{ipsum} dolor \textit{sit amet}, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore.
 Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.
-worked
+\VAR{p["test"]}
 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore. After this should be an extra new line!
 \begin{itemize}
 \item Lorem ipsum dolor
